--- a/03.html
+++ b/03.html
@@ -13,8 +13,8 @@
 
         <h1> COMPRAR </h1>
 
-        <a href="Prod-Agricola.html"> PRODUTOS AGRÍCOLAS </a>
-        <a href="Prod-Agropecuaria.html"> PRODUTOS DA AGROPECUÁRIA </a>
+        <a href="04.html"> PRODUTOS AGRÍCOLAS </a>
+        <a href="05.html"> PRODUTOS DA AGROPECUÁRIA </a>
 
         <input type="text" name="Produto" id="Produto" placeholder="Buscar">
 
