LInkando a Página 06 com a 01

--- a/01.html
+++ b/01.html
@@ -14,7 +14,7 @@
         <h1> OLÁ! (Nome) </h1>
         <h2> DO QUE PRECISA? </h2>
 
-        <a href="VENDER.html"> VENDER </a>
+        <a href="06.html"> VENDER </a>
         <a href="02.html"> INFO </a>
         <a href="03.html"> COMPRAR </a>
 
