--- a/02.html
+++ b/02.html
@@ -16,7 +16,7 @@
 
         <a href="Info-Mercado.html"> MERCADO </a>
         <a href="Info-Manutencao.html"> MANUTENÇÃO </a>
-        <a href="Info-Guia.html"> GUIA </a>
+        <a href="guia.html"> GUIA </a>
 
         <!-- Mudar os nomes dos links depois! -->
         
