--- a/08.html
+++ b/08.html
@@ -10,15 +10,15 @@
 <body>
 
     <main>
-
+        
         <img src="IMG\perfil.png" alt="foto de perfil" width="50">
 
         <h1> NOME </h1>
 
         <em> Tenho interesse! </em>
-        
+
         <div class="image-container">
-            <img src="IMG\Vaca_chat.jpeg" alt="imagem vaca" width="200">
+            <img src="IMG\Porco_chat.jpg" alt="imagem vaca" width="200">
         </div>
 
         <input type="text" name="chat" id="mensagem" placeholder="Digite sua mensagem">
