Mudança Produtos Agropecuaria (adc fts p/ chat)

--- a/05.html
+++ b/05.html
@@ -1,5 +1,3 @@
-#produtos
-
 <!DOCTYPE html>
 
 <html lang="pt-BR">
@@ -13,11 +11,13 @@
 
     <main>
 
-        <h1>produtos AGROPECUÁRIA </h1>
+        <h1>PRODUTOS AGROPECUÁRIA </h1>
         
         <em> VACA </em>
 
-        <a href="Postar.html"> Chat </a>
+        <a href="Postar.html">
+            <img src="IMG\balao.webp" alt="imagem vaca" width="50">
+        </a>
 
         <div class="image-container">
             <img src="IMG\vaca.webp" alt="imagem vaca" width="200">
@@ -27,7 +27,9 @@
 
         <em> PORCO </em>
 
-        <a href="Postar.html"> Chat </a>
+        <a href="Postar.html">
+            <img src="IMG\balao.webp" alt="imagem vaca" width="50">
+        </a>
 
         <div class="image-container">
             <img src="IMG\porco.png" alt="imagem PORCO" width="200">
