--- a/guia.html
+++ b/guia.html
@@ -13,7 +13,7 @@
     <main>
 
         <h1>guia</h1>
-        <input type="text" name="Produto" id="Produto" placeholder="Buscar">
+        <input type="text" name="Produto" id="Produto" placeholder="Pergunta">
         
     </main>
 
