--- a/alface.html
+++ b/alface.html
@@ -8,9 +8,9 @@
     <main>
         <h1>ALFACE</h1>
         <div class="image-container">
-            <img src="alface.png" alt="Imagem de um alface" width="200">
+            <img src="IMG\alface.jpeg" alt="Imagem de um alface" width="200">
             <div class="topic">
-                <img src="graficoalface.png" alt="Gráfico do alface" width="200">
+                <img src="IMG\grafico_alface.jpeg" alt="Gráfico do alface" width="200">
                 <p>VENDAS RECENTES</p>
             </div>
         </div>
