--- a/cenoura.html
+++ b/cenoura.html
@@ -8,9 +8,9 @@
     <main>
         <h1>CENOURA</h1>
         <div class="image-container">
-            <img src="cenoura.png" alt="Imagem de uma cenoura" width="200">
+            <img src="IMG\cenoura.jpeg" alt="Imagem de uma cenoura" width="200">
             <div class="topic">
-                <img src="graficocenoura.png" alt="Gráfico da cenoura" width="200">
+                <img src="IMG\grafico_cenoura.jpeg" alt="Gráfico da cenoura" width="200">
                 <p>VENDAS RECENTES</p>
             </div>
         </div>
