--- a/tomate2.html
+++ b/tomate2.html
@@ -8,9 +8,9 @@
     <main>
         <h1>TOMATE</h1>
         <div class="image-container">
-            <img src="tomate.png" alt="Imagem de um tomate" width="200">
+            <img src="IMG\tomate.jpeg" alt="Imagem de um tomate" width="200">
             <div class="topic">
-                <img src="graficotomate.png" alt="Gráfico do tomate" width="200">
+                <img src="IMG\grafico_tomate.jpeg" alt="Gráfico do tomate" width="200">
                 <p>VENDAS RECENTES</p>
             </div>
         </div>
