Botão 'Voltar' Funcionando

--- a/05.html
+++ b/05.html
@@ -15,8 +15,8 @@
         
         <em> VACA </em>
 
-        <a href="Postar.html">
-            <img src="IMG\balao.webp" alt="imagem vaca" width="50">
+        <a href="07.html">
+            <img src="IMG\balao.webp" alt="balao" width="50">
         </a>
 
         <div class="image-container">
@@ -27,8 +27,8 @@
 
         <em> PORCO </em>
 
-        <a href="Postar.html">
-            <img src="IMG\balao.webp" alt="imagem vaca" width="50">
+        <a href="08.html">
+            <img src="IMG\balao.webp" alt="balao" width="50">
         </a>
 
         <div class="image-container">
