--- a/manutenção.html
+++ b/manutenção.html
@@ -12,7 +12,7 @@
 
     <main>
 
-        <h1>guia</h1>
+        <h1>manutenção</h1>
         <input type="text" name="Produto" id="Produto" placeholder="Buscar">
         
     </main>
