--- a/02.html
+++ b/02.html
@@ -15,7 +15,7 @@
         <input type="text" name="informacao" id="info" placeholder="Buscar Informações">
 
         <a href="mercado.html"> MERCADO </a>
-        <a href="manutencao.html"> MANUTENÇÃO </a>
+        <a href="manutenção.html"> MANUTENÇÃO </a>
         <a href="guia.html"> GUIA </a>
 
         <!-- Mudar os nomes dos links depois! -->
