Bug Fix + Header em 07 e 08

--- a/04.html
+++ b/04.html
@@ -1,5 +1,3 @@
-#produtos agricolas
-
 <!DOCTYPE html>
 
 <html lang="pt-BR">
@@ -13,9 +11,11 @@
 
     <main>
 
-        <h1>produtos AGRÍCOLAS </h1>
+        <h1>PRODUTOS AGRÍCOLAS </h1>
         <input type="text" name="Produto" id="Produto" placeholder="Buscar">
 
     </main>
 
 </body>
+
+</html>
