--- a/08.html
+++ b/08.html
@@ -9,8 +9,8 @@
 
 <body>
 
-    <main>
-        
+
+    <header>
         <a href="05.html"> 
             <img src="IMG\Voltar.png" alt="voltar" width="50">
         </a>
@@ -18,7 +18,9 @@
         <img src="IMG\perfil.png" alt="foto de perfil" width="50">
 
         <h1> NOME </h1>
+    </header>
 
+    <main>
         <em> Tenho interesse! </em>
 
         <div class="image-container">
@@ -26,7 +28,8 @@
         </div>
 
         <input type="text" name="chat" id="mensagem" placeholder="Digite sua mensagem">
-        
     </main>
 
 </body>
+
+</html>
