Conectando 09 c/ 06 + botão voltar

--- a/06.html
+++ b/06.html
@@ -29,7 +29,7 @@
         <em> DESCRIÇÃO </em>
         <input type="text" name="DESCRIÇÃO" id="DESCRIÇÃO" placeholder="Descreva o produto">
 
-        <a href="Postar.html"> POSTAR </a>
+        <a href="09.html"> POSTAR </a>
         
 
     </main>
